# Lightweight-RISCV

./: .~lock.Results.ods#  CMakeLists.txt  README.md  Results.ods
FreeRTOS-Kernel/portable/GCC/RISC-V/: portmacro.h
src/: main.c  serialmain.c
src/cypher/aes_hardware/cbc/128/: algorithm_selection.h
src/cypher/aes_hardware/cbc/192/: algorithm_selection.h
src/cypher/aes_hardware/cbc/256/: algorithm_selection.h
src/cypher/aes_hardware/ecb/128/: algorithm_selection.h
src/cypher/aes_hardware/ecb/192/: algorithm_selection.h
src/cypher/aes_hardware/ecb/256/: algorithm_selection.h
src/cypher/aes_hardware/gcm/128/: algorithm_selection.h
src/cypher/aes_hardware/gcm/192/: algorithm_selection.h
src/cypher/aes_hardware/gcm/256/: algorithm_selection.h
src/cypher/aes_software/: aes.h  aes_soft.c
src/cypher/aes_software/cbc/128/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/cbc/192/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/cbc/256/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ctr/128/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ctr/192/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ctr/256/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ecb/128/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ecb/192/: aes_soft.h  algorithm_selection.h
src/cypher/aes_software/ecb/256/: aes_soft.h  algorithm_selection.h
src/cypher/ascon/algorithms/ascon-80pq/: aead.c  algorithm_selection.h  api.h
src/cypher/ascon/algorithms/ascon-hash/: algorithm_selection.h  api.h
src/cypher/ascon/algorithms/ascon-hasha/: api.h
src/cypher/ascon/algorithms/ascon-mac/: api.h
src/cypher/ascon/algorithms/ascon-prfs/: algorithm_selection.h  prf.c
src/cypher/ascon/algorithms/ascon-xof/: api.h
src/cypher/ascon/ascon-lib/: cpucycles.h  crypto_auth.h  printstate.c  word.h
src/cypher/sha256/: algorithm_selection.h
src/kk/: board_config.h  image.h  image.txt  led.c  led.h  main.c  main2  main2.c
